# video_compressor_service

./: .env.sample  .gitignore  Cargo.toml  Carrgo.toml
client/: Cargo.toml
client/src/: app.rs  main.rs  prompts.rs
client/src/app/: cli_args.rs  command_prompter.rs  prompt.rs  video_file_validator.rs
protocol/: Cargo.toml
protocol/src/: response.rs  status.rs
server/: Cargo.toml
server/src/: app.rs  ffmpeg.rs  main.rs
server/src/app/: command_processor.rs  converter.rs  tcp_stream_handler.rs  transcoder.rs  transcoder_options.rs  video_transcoder.rs
server/src/ffmpeg/: options.rs
server/src/ffmpeg/options/: aspect_ratio.rs  audio_codec.rs  clip_range.rs  codec.rs  crf.rs  pixel_format.rs  preset.rs  resolution.rs  vbr_quality.rs  video_codec.rs
shared/: Cargo.toml
shared/src/: config_loader.rs  constants.rs  file_downloader.rs  file_uploader.rs  lib.rs  tcp_util.rs
shared/src/app/: aspect_ratio.rs  command.rs  config.rs  mod.rs  request.rs  request_json.rs  resolution.rs
shared/src/app/command/: aspect_ratio.rs  aspect_ratio_fit.rs  clip_range.rs  media_type_for_clip.rs  resolution.rs
shared/src/mmp/: json.rs  media_type.rs  mod.rs  packet.rs  payload.rs  response.rs  status.rs  stream.rs
shared/src/protocol/: mod.rs  response.rs
shared/src/util/: data_size.rs  even.rs  file_downloader.rs  file_path.rs  file_uploader.rs  mod.rs  slice.rs  tcp_stream_wrapper.rs  tcp_util.rs
