[workspace]
members = ["client", "server", "shared"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.44"
dotenvy = "0.15.0"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
strum = "0.27.0"
strum_macros = "0.27.0"
serde_json = "1.0.138"
derive_more = { version = "2.0", features = ["display"] }
derive_builder = "0.20.0"
chrono = "0.4.40"
