[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
dotenvy.workspace = true
clap.workspace = true
dialoguer = "0.11.0"
strum.workspace = true
strum_macros.workspace = true
serde_json.workspace = true
ffmpeg-next = "7.1.0"
