[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow.workspace = true
dotenvy.workspace = true
chrono = "0.4.39"
serde_json.workspace = true
derive_builder.workspace = true
derive_more.workspace = true
ffmpeg-next = "7.1.0"
num = "0.4.0"
