[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.7"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.19"
strum.workspace = true
strum_macros.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
derive_more.workspace = true
derive_builder.workspace = true
